[build-system]
requires = [
    "setuptools >= 42",
    "setuptools_scm[toml] >= 3.4",
    "wheel",
]
build-backend = "setuptools.build_meta"

# Infer version number from source-control management (e.g. Git)
[tool.setuptools_scm]
write_to = "src/tlsprint/_version.py"
write_to_template = "__version__ = '{version}'"
