[build-system]
requires = [
    "setuptools >= 42",
    "setuptools_scm[toml] >= 3.4",
    "wheel",
]
build-backend = "setuptools.build_meta"

# Infer version number from source-control management (e.g. Git)
[tool.setuptools_scm]
write_to = "src/tlsprint/_version.py"
write_to_template = "__version__ = '{version}'"

[tool.black]
target-version = ["py36"]
exclude = "(venv|models)"

# Black compatible isort configuration
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
