[metadata]
name = tlsprint
description = Fingerprint TLS implementations
long_description = file: README.md
author = Erwin Janssen
author_email = erwinjanssen@outlook.com
url = https://github.com/ErwinJanssen/tlsprint

[options]
packages = tlsprint
package_dir =
    = src
install_requires =
    click
    networkx
    pydot

[options.entry_points]
console_scripts =
    tlsprint = tlsprint.cli:main

[options.package_data]
tlsprint =
    connector/*
    connector/lib/*
    data/*

[tool:pytest]
addopts = --cov=tlsprint --cov-report html --cov-report term
