[metadata]
name = tlsprint
description = Fingerprint TLS implementations
long_description = file: README.md
author = Erwin Janssen
author_email = erwinjanssen@outlook.com
url = https://github.com/tlsprint/tlsprint

[options]
packages = find:
package_dir =
    = src
install_requires =
    click
    networkx
    pandas
    pydot
    seaborn
    tabulate

[options.entry_points]
console_scripts =
    tlsprint = tlsprint.cli:main

[options.packages.find]
where = src

[options.package_data]
tlsprint =
    connector/*
    connector/lib/*
    data/*
    data/*/*

[tool:pytest]
addopts = --cov=tlsprint --cov-report html --cov-report term --ignore models
